add all files to github

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <img src="designs/Design2.png" alt="">
+    <header class="header">
+        <div class="header__text-box">
+            <div class="header__primary">
+                <span class="header__primary-main">STEVEN MEJORADA</span>
+                <span class="header__primary-sub">A MERN stack developer with a keen interest in creative technologies and  UI/UX design.</span>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
