finish styling contact form, need to edit html

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                </ul>
             </div>
             <form action="" class="contact__form">
-                <input type="text" name="Name" id="name" placeholder="Name:">
-                <input type="email" name="Email" id="email" placeholder="Email:">
-                <textarea name="Message" id="message" cols="30" rows="10" placeholder="Message:"></textarea>
+                <input class="contact__form-input" type="text" name="Name" id="name" placeholder="Name:">
+                <input class="contact__form-input" type="email" name="Email" id="email" placeholder="Email:">
+                <textarea class="contact__form-textarea" name="Message" id="message"  placeholder="Message:"></textarea>
+                <button class="btn" type="submit">Submit</button>
             </form>
         </div>
     </section>
